@@ -23,8 +23,7 @@ final class Lox {
   }
 
   private static void runFile(String path) throws IOException {
-    byte[] bytes = Files.readAllBytes(Paths.get(path));
-    run(new String(bytes, Charset.defaultCharset()));
+    run(Files.readString(Paths.get(path), Charset.defaultCharset()));
     if (hadError) {
       System.exit(65);
     }
